@@ -289,11 +289,16 @@ main (int argc, char **argv)
 #endif
         err (1, _("couldn't drop privileges properly"));
 
-	program = gnome_program_init(PACKAGE, VERSION, LIBGNOMEUI_MODULE, argc, argv,
-                    GNOME_PARAM_POPT_TABLE, options,
-                    GNOME_PARAM_HUMAN_READABLE_NAME, _("Encryption Passphrase Agent"),
-                    GNOME_PARAM_APP_DATADIR, DATA_DIR, NULL);
+    program = gnome_program_init(PACKAGE, VERSION, LIBGNOMEUI_MODULE, argc, argv,
+                                 GNOME_PARAM_POPT_TABLE, options,
+                                 GNOME_PARAM_HUMAN_READABLE_NAME, _("Encryption Passphrase Agent"),
+                                 GNOME_PARAM_APP_DATADIR, DATA_DIR, NULL);
 
+#ifdef _DEBUG 
+    g_log_set_always_fatal (G_LOG_LEVEL_WARNING | G_LOG_FLAG_FATAL | 
+                            G_LOG_LEVEL_ERROR | G_LOG_LEVEL_CRITICAL);
+#endif
+    
     if (seahorse_agent_io_socket (&sockname) == -1)
         return 1;               /* message already printed */
 
