@@ -1,6 +1,8 @@
 2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/gtk-secure-entry.c: Supress warning
+    * agent/seahorse-agent.c: 
+    * src/main.c: Force exit on all warnings in debug mode    
     
 2005-07-27  Nate Nielsen  <nielsen@memberwebs.com>
     
